Introduce HTML injection vulnerability
This commit uses the @Html directive to bypass Play's default
HTML tags escaping, thus introducing an HTML injection vulnerability.

--- a/play-scala-forms-example/app/views/listWidgets.scala.html
+++ b/play-scala-forms-example/app/views/listWidgets.scala.html
@@ -15,7 +15,7 @@
       </thead>
       <tbody>
       @for(w <- widgets) {
-        <tr><td>@w.name</td><td>@w.price</td></tr>
+        <tr><td>@Html(w.name)</td><td>@w.price</td></tr>
       }
       </tbody>
     </table>
