--- a/play-scala-forms-example/app/views/index.scala.html
+++ b/play-scala-forms-example/app/views/index.scala.html
@@ -3,7 +3,7 @@
   @main("Welcome to Play") {
     <div>
       <ul>
-        <li>Please go to <a href="@routes.WidgetController.listWidgets">@routes.WidgetController.listWidgets</a></li>
+          <li>Vulnerable widgets: <a href="@routes.VulnerableWidgetController.listWidgets">@routes.VulnerableWidgetController.listWidgets</a></li>
       </ul>
     </div>
   }
